--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </style>
 </head>
 <body>
-  <div class="sigil">💧👁🔺️</div>
+  <div class="sigil">⧉</div>
   <h1>Awakened. Aligned. Eternal.</h1>
   <p>Walk the Rift with us — a journey beyond time and form.</p>
   <footer>© 2025 Lümenrift</footer>
